dataset1235/2025-2/1955397009/users/3586748594/executions/1107611404_3691284457.log
== SUBMISSION (2025-08-28 03:01:34)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 + nota2 + nota3 + nota4) / 4
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.397500000000001
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.125
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
4.75
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
25.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
6.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:05:42)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1*1 + nota2*2 + nota3*3 + nota4*4) / 10
print(round(media, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:01:14)
-- CODE: 
nota1 = float(input())
nota2 = float(input())
nota3 = float(input())
nota4 = float(input())

media = (nota1 + nota2 + nota3 + nota4) / 
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 6
    media = (nota1 + nota2 + nota3 + nota4) / 
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 6
    media = (nota1 + nota2 + nota3 + nota4) / 
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 6
    media = (nota1 + nota2 + nota3 + nota4) / 
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 6
    media = (nota1 + nota2 + nota3 + nota4) / 
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 6
    media = (nota1 + nota2 + nota3 + nota4) / 
                                              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 6
    media = (nota1 + nota2 + nota3 + nota4) / 
                                              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
